--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+	<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
     <script src="./script.js"></script>
     <link rel="stylesheet" href="./style.css">
 </head>
@@ -13,5 +15,6 @@
 <h1 id="weather"></h1>
 <p id="location"></p>
 <p id="temperature"></p>
+<input id="unit" checked data-toggle="toggle" data-on="Celsius" data-off="Fahrenheit" data-onstyle="success" data-offstyle="info" type="checkbox">
 </body>
 </html>
