Add images that change with weather conditions

--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<h1 id="weather"></h1>
-<p id="location"></p>
-<p id="temperature"></p>
-<input id="unit" checked data-toggle="toggle" data-on="Celsius" data-off="Fahrenheit" data-onstyle="success" data-offstyle="info" type="checkbox">
+    <div class="col-md-4 col-md-offset-4 weatherblock">
+        <h1 id="weather"></h1>
+        <h4 id="location"><h4>
+        <h4 id="temperature"></h4>
+        <input id="unit" checked data-toggle="toggle" data-on="Celsius" data-off="Fahrenheit" data-onstyle="success" data-offstyle="info" type="checkbox">
+    </div>
 </body>
 </html>
